<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings_preference_screen">

    <PreferenceCategory
        android:key="header_general"
        android:title="@string/settings_header_general">

        <CheckBoxPreference
            android:key="allowMessages"
            android:title="@string/settings_allow_messages"
            android:summary="@string/settings_allow_messages_summary">
        </CheckBoxPreference>

        <Preference
            android:key="settings_push_notifications"
            android:title="@string/settings_notifications" />

        <Preference
            android:key="settings_change_password"
            android:title="@string/settings_change_password"
            android:enabled="true"
            android:summary="" />

        <Preference
            android:key="settings_deactivate_account"
            android:title="@string/settings_deactivate_account"
            android:enabled="true"
            android:summary="" />

        <Preference
            android:key="settings_blocked_list"
            android:title="@string/settings_view_blocked_list" />

        <Preference
            android:key="settings_services"
            android:title="@string/settings_services"

            android:summary="@string/settings_services_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="header_about"
        android:title="@string/settings_header_about">

        <Preference
            android:key="settings_terms"
            android:title="@string/settings_terms"

            android:summary="" />

        <Preference
            android:key="settings_thanks"
            android:title="@string/settings_thanks"

            android:summary="" />

        <Preference
            android:key="settings_version"
            android:title="@string/settings_version"

            android:summary="@string/settings_copyright_info" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="header_others"
        android:title="@string/settings_header_others">

        <Preference
            android:key="settings_logout"
            android:title="@string/settings_logout"
            android:enabled="true"
            android:summary="" />

        <Preference
            android:key="settings_contact_us"
            android:title="@string/settings_contact_us"

            android:summary="@string/settings_contact_us_summary" />
    </PreferenceCategory>

</PreferenceScreen>
