<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cchd.talk2me.AccountSettingsFragment"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:background="#fff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_fullname"
                android:ems="10"
                android:id="@+id/fullname"
                android:maxLength="55"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_location"
                android:ems="10"
                android:id="@+id/location"
                android:maxLength="255"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_facebook_page"
                android:ems="10"
                android:id="@+id/facebookPage"
                android:maxLength="255"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_instagram_page"
                android:id="@+id/instagramPage"
                android:maxLength="255"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_bio"
                android:inputType="textMultiLine"
                android:ems="10"
                android:maxLength="255"
                android:id="@+id/bio"
                android:layout_marginTop="10dp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_profile_allow_show_birth"
                android:id="@+id/allowShowDatebirth"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:id="@+id/selectGender"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_white"
                android:textColor="@color/dark_blue" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date of Birth"
                android:id="@+id/selectBirth"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_white"
                android:textColor="@color/dark_blue" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>